[package]
name = "cys402_project_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["alloc", "serde"] }
clap = { version = "4.5.21", features = ["cargo"] }
fhe = { git = "https://github.com/zefr0x/fhe.rs", branch = "main", commit = "613654653970031c5acc4e1f6c697c86d5f58ab4" }
fhe-traits = { git = "https://github.com/zefr0x/fhe.rs", branch = "main", commit = "613654653970031c5acc4e1f6c697c86d5f58ab4" }
hex = "0.4.3"
libp2p = { version = "0.54.1", features = ["floodsub", "tokio", "mdns", "tcp", "macros", "noise", "yamux", "quic", "serde" ] }
libp2p-stream = "0.2.0-alpha"
log = "0.4.22"
md5 = "0.7.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.15.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
zstd = "0.13.2"
